- bump max_nb() to 131 to cover mdadm managed imsm and ddf1 bios
  fakeraids (containers defaults to >= 127 and partitions <=126)

Version 16.70 - 21 March 2015

- better fix for the scrollbar in the package installation details
  window (Martin Whitaker, mga#13894)

Version 16.69 - 20 March 2015

- efi partitioning fixes from tv
- diskdrake & package install gtk fixes from Martin Whitaker

Version 16.68 - 17 March 2015

- drakboot:
  o log mkinitrd faillures (mga#9201)
- fix mis-detecting some mobile broadband modems (mga#12492)

Version 16.66 - 5 March 2015

- diskdrake:
  o add "nofail" option to "foreign" mountpoints to avoid unwanted recovery mode (#10179)

Version 16.63 - 27 February 2015

- diskdrake:
  o fix too wide buttons (mga#12422, mga#13471, mga#14839, mga#15379)
- increase default linux raid chunk size from 64 to 512KB

Version 16.62 - 19 February 2015

- diskdrake (mga#12422, mga#11988, mga#14839, mga#15272, mga#15264):
  o use an horizontal scrolling bar when needed
  o workaround too wide togglebuttons with empty label with gtk+3 and/or Adwaita
- library (for draklive-install):
  o use a vertical scrolling bar when needed (mga#15272)

Version 16.56 - 10 February 2015
- i18n: Use the x-distro /etc/locale.conf file instead of /etc/sysconfig/i18n
- drakedm: Do not use ancient dm init script to restart DM
- service_harddrake:
  * add support for the new nvidia340 driver (mga#15255)
  * drop references to old unsupported nVidia drivers

Version 16.55 - 9 February 2015

- drakclock: Ensure that /etc/localtime is a symlink (mga#14888)
- users: Make sure to restart accounts-daemon after adding users (mga#15113, mga#14476)
- i18n: Write the desired console font to /etc/vconsole.conf
- drakedm: Do not use ancient dm init script to restart DM
- switch from oxygen-gtk to Adwaita theme

Version 16.52 - 5 February 2015

- libDrakX/fsedit.pm: new "simple" partitioning scheme
  o create separate /home only when more than 50G are available