@@ -1,5 +1,7 @@
 - bump max_nb() to 131 to cover mdadm managed imsm and ddf1 bios
   fakeraids (containers defaults to >= 127 and partitions <=126)
+- partitionning:
+  o fix retrieving ESP partition type on GPT
 
 Version 16.69 - 20 March 2015
 
