@@ -1,3 +1,5 @@
+- diskdrake:
+  o fix retrieving ESP partition type on GPT
 - bump max_nb() to 131 to cover mdadm managed imsm and ddf1 bios
   fakeraids (containers defaults to >= 127 and partitions <=126)
 
